--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01f73654",
+   "id": "0375a89f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,9 @@
     "\n",
     "# Load the data (assuming file paths are already set)\n",
     "df_processed = pd.read_excel(\"file.xlsx\", sheet_name=\"Processed Data\")\n",
-    "df_girs = pd.read_excel(\"file.xlsx\", sheet_name=\"GIRS\")\n",
     "\n",
     "# Standardize PSID format by stripping leading zeros\n",
     "df_processed[\"PSID\"] = df_processed[\"PSID\"].astype(str).str.lstrip(\"0\")\n",
-    "df_girs[\"PSID\"] = df_girs[\"PSID\"].astype(str).str.lstrip(\"0\")\n",
-    "\n",
-    "# Merge GIRS Current Status\n",
-    "df_processed = df_processed.merge(df_girs[[\"PSID\", \"GIRS Current Status\"]], on=\"PSID\", how=\"left\")\n",
     "\n",
     "# Define function to determine comments\n",
     "def get_comment(row):\n",
@@ -60,15 +55,15 @@
     "        df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
     "\n",
     "# --- Changes Added ---\n",
-    "# 1. Standardized PSID by removing leading zeros before merging.\n",
-    "# 2. Added a new 'Comments' column to Processed Data sheet with decision logic.\n",
-    "# 3. Created new sheets dynamically for each unique comment and saved data accordingly.\n"
+    "# 1. Removed GIRS sheet merge as \"GIRS Current Status\" already exists in Processed Data.\n",
+    "# 2. Updated logic to work directly with Processed Data without referencing GIRS.\n",
+    "# 3. Kept all other logic intact for comments and sheet creation.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "921aec3f",
+   "id": "477bf9be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "309014ec",
+   "id": "9e92beba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1ed9775",
+   "id": "c4b20b5a",
    "metadata": {},
    "outputs": [],
    "source": [
