--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,67 +3,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0375a89f",
+   "id": "3ad800a1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Load the data (assuming file paths are already set)\n",
-    "df_processed = pd.read_excel(\"file.xlsx\", sheet_name=\"Processed Data\")\n",
+    "# Load Processed Data\n",
+    "processed_data_path = \"processed_data.xlsx\"\n",
+    "wb = pd.ExcelFile(processed_data_path)\n",
+    "df_processed = wb.parse(\"Processed Data\")\n",
     "\n",
-    "# Standardize PSID format by stripping leading zeros\n",
-    "df_processed[\"PSID\"] = df_processed[\"PSID\"].astype(str).str.lstrip(\"0\")\n",
+    "# Define dynamic columns\n",
+    "exclude_cols = [\"PSID\", \"Resource Name\", \"Email\", \"Tier1\", \"TTRL\", \"PDMR\", \"GIRS Current Status\"]\n",
+    "dynamic_cols = [col for col in df_processed.columns if col not in exclude_cols]\n",
     "\n",
-    "# Define function to determine comments\n",
-    "def get_comment(row):\n",
-    "    tier1, ttrl, pdmr = row[\"Tier1\"], row[\"TTRL\"], row[\"PDMR\"]\n",
-    "    girs_status = row[\"GIRS Current Status\"]\n",
-    "    dynamic_cols = [col for col in row.index if col not in [\"PSID\", \"Resource Name\", \"Email\", \"Tier1\", \"TTRL\", \"PDMR\", \"GIRS Current Status\"]]\n",
-    "    values = row[dynamic_cols].tolist()\n",
+    "# Add Comment Column\n",
+    "def classify_comment(row):\n",
+    "    tier_check = row[\"Tier1\"] == \"Yes\" or row[\"TTRL\"] == \"Yes\" or row[\"PDMR\"] == \"Yes\"\n",
+    "    girs_status = row[\"GIRS Current Status\"].strip().lower() if isinstance(row[\"GIRS Current Status\"], str) else \"\"\n",
     "    \n",
-    "    if (girs_status in [\"inactive insider\", \"\"] and any([tier1 == \"Yes\", ttrl == \"Yes\", pdmr == \"Yes\"])):\n",
+    "    dynamic_values = row[dynamic_cols].dropna().unique()\n",
+    "    add_exists = \"Add\" in dynamic_values\n",
+    "    del_exists = \"Del\" in dynamic_values\n",
+    "    cur_exists = \"Cur\" in dynamic_values\n",
+    "    only_na_cur_del = all(val in [\"N/A\", \"Cur\", \"Del\"] for val in dynamic_values)\n",
+    "    only_na_cur = all(val in [\"N/A\", \"Cur\"] for val in dynamic_values)\n",
+    "    \n",
+    "    if girs_status in [\"inactive insider\", \"\"] and tier_check:\n",
     "        return \"Part of Tier1, TTRL, PDMR\"\n",
-    "    if (girs_status == \"non-core\" and any([tier1 == \"Yes\", ttrl == \"Yes\", pdmr == \"Yes\"])):\n",
+    "    elif girs_status == \"non-core\" and tier_check:\n",
     "        return \"Change to Inactive\"\n",
-    "    if (girs_status == \"\" and all([tier1 == \"No\", ttrl == \"No\", pdmr == \"No\"]) and \"Add\" in values and all(v in [\"N/A\", \"cur\", \"Del\"] for v in values if v != \"Add\")):\n",
+    "    elif girs_status == \"\" and not tier_check and add_exists and only_na_cur_del:\n",
     "        return \"To Add\"\n",
-    "    if (girs_status == \"inactive insider\" and all([tier1 == \"No\", ttrl == \"No\", pdmr == \"No\"]) and \"Del\" in values and all(v in [\"N/A\", \"cur\"] for v in values if v != \"Del\")):\n",
+    "    elif girs_status == \"inactive insider\" and not tier_check and del_exists and only_na_cur:\n",
     "        return \"Already Inactive\"\n",
-    "    if (girs_status == \"non-core\" and all([tier1 == \"No\", ttrl == \"No\", pdmr == \"No\"]) and \"Add\" in values and all(v in [\"N/A\", \"cur\", \"Del\"] for v in values if v != \"Add\")):\n",
+    "    elif girs_status == \"non-core\" and not tier_check and add_exists and only_na_cur_del:\n",
     "        return \"Already Non-Core\"\n",
-    "    if (girs_status == \"inactive insider\" and all([tier1 == \"No\", ttrl == \"No\", pdmr == \"No\"]) and \"Del\" in values and all(v in [\"N/A\", \"cur\"] for v in values if v != \"Del\")):\n",
+    "    elif girs_status == \"inactive insider\" and not tier_check and del_exists and only_na_cur:\n",
     "        return \"No Action\"\n",
-    "    if (girs_status == \"non-core\" and all([tier1 == \"No\", ttrl == \"No\", pdmr == \"No\"]) and any(v in [\"cur\", \"Add\"] for v in values) and all(v in [\"N/A\", \"Del\"] for v in values if v not in [\"cur\", \"Add\"])):\n",
+    "    elif girs_status == \"non-core\" and not tier_check and (cur_exists or add_exists) and only_na_cur:\n",
     "        return \"No Action\"\n",
-    "    if (girs_status in [\"\", \"non-core\"] and all([tier1 == \"No\", ttrl == \"No\", pdmr == \"No\"]) and \"Del\" in values and all(v in [\"N/A\"] for v in values if v != \"Del\")):\n",
+    "    elif not tier_check and girs_status in [\"\", \"non-core\"] and del_exists and only_na_cur:\n",
     "        return \"To Delete\"\n",
-    "    if (girs_status in [\"\", \"non-core\"] and all([tier1 == \"No\", ttrl == \"No\", pdmr == \"No\"]) and any(v in [\"cur\", \"Add\"] for v in values) and all(v in [\"N/A\", \"Del\"] for v in values if v not in [\"cur\", \"Add\"])):\n",
-    "        return \"To retain Non-Core\"\n",
-    "    return \"\"\n",
+    "    elif not tier_check and girs_status in [\"\", \"non-core\"] and (cur_exists or add_exists) and only_na_cur_del:\n",
+    "        return \"To Retain Non-Core\"\n",
+    "    else:\n",
+    "        return \"Uncategorized\"\n",
     "\n",
-    "# Apply function to determine comments\n",
-    "df_processed[\"Comments\"] = df_processed.apply(get_comment, axis=1)\n",
+    "# Apply comment classification\n",
+    "df_processed[\"Comment\"] = df_processed.apply(classify_comment, axis=1)\n",
     "\n",
-    "# Create new sheets for each unique comment\n",
-    "df_dict = {comment: df_processed[df_processed[\"Comments\"] == comment] for comment in df_processed[\"Comments\"].unique() if comment}\n",
-    "\n",
-    "# Save to new Excel file\n",
-    "with pd.ExcelWriter(\"updated_file.xlsx\", engine=\"xlsxwriter\") as writer:\n",
+    "# Save back to processed data sheet\n",
+    "with pd.ExcelWriter(processed_data_path, engine=\"openpyxl\", mode=\"a\", if_sheet_exists=\"replace\") as writer:\n",
     "    df_processed.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n",
-    "    for sheet_name, df in df_dict.items():\n",
-    "        df.to_excel(writer, sheet_name=sheet_name, index=False)\n",
     "\n",
-    "# --- Changes Added ---\n",
-    "# 1. Removed GIRS sheet merge as \"GIRS Current Status\" already exists in Processed Data.\n",
-    "# 2. Updated logic to work directly with Processed Data without referencing GIRS.\n",
-    "# 3. Kept all other logic intact for comments and sheet creation.\n"
+    "# Copy records to new sheets based on comments\n",
+    "with pd.ExcelWriter(processed_data_path, engine=\"openpyxl\", mode=\"a\") as writer:\n",
+    "    for comment in df_processed[\"Comment\"].unique():\n",
+    "        df_filtered = df_processed[df_processed[\"Comment\"] == comment]\n",
+    "        df_filtered.to_excel(writer, sheet_name=comment, index=False)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "477bf9be",
+   "id": "feed6421",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e92beba",
+   "id": "00365f47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4b20b5a",
+   "id": "c92ae440",
    "metadata": {},
    "outputs": [],
    "source": [
