--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,72 +3,74 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ad800a1",
+   "id": "dac36501",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Updated Code for Processing Data with Comments and Categorization\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
-    "# Load Processed Data\n",
-    "processed_data_path = \"processed_data.xlsx\"\n",
-    "wb = pd.ExcelFile(processed_data_path)\n",
-    "df_processed = wb.parse(\"Processed Data\")\n",
+    "# Load data (assuming dfs are already loaded)\n",
+    "# processed_data = ...\n",
     "\n",
-    "# Define dynamic columns\n",
-    "exclude_cols = [\"PSID\", \"Resource Name\", \"Email\", \"Tier1\", \"TTRL\", \"PDMR\", \"GIRS Current Status\"]\n",
-    "dynamic_cols = [col for col in df_processed.columns if col not in exclude_cols]\n",
+    "# Ensure dynamic columns are in lowercase for consistency\n",
+    "dynamic_cols = [col.lower() for col in processed_data.columns if col not in [\"PSID\", \"Resource Name\", \"Email\", \"Tier1\", \"TTRL\", \"PDMR\", \"GIRS Current Status\"]]\n",
     "\n",
-    "# Add Comment Column\n",
-    "def classify_comment(row):\n",
-    "    tier_check = row[\"Tier1\"] == \"Yes\" or row[\"TTRL\"] == \"Yes\" or row[\"PDMR\"] == \"Yes\"\n",
-    "    girs_status = row[\"GIRS Current Status\"].strip().lower() if isinstance(row[\"GIRS Current Status\"], str) else \"\"\n",
+    "# Standardize \"N/A\" values in dynamic columns\n",
+    "processed_data[dynamic_cols] = processed_data[dynamic_cols].replace(\"\", \"N/A\")\n",
+    "\n",
+    "# Define function to classify records\n",
+    "def classify_records(row):\n",
+    "    girs_status = row[\"GIRS Current Status\"].strip().lower() if pd.notna(row[\"GIRS Current Status\"]) else \"\"\n",
+    "    tier_check = row[[\"Tier1\", \"TTRL\", \"PDMR\"]].eq(\"Yes\").any()\n",
+    "    tier_all_no = row[[\"Tier1\", \"TTRL\", \"PDMR\"]].eq(\"No\").all()\n",
     "    \n",
-    "    dynamic_values = row[dynamic_cols].dropna().unique()\n",
-    "    add_exists = \"Add\" in dynamic_values\n",
-    "    del_exists = \"Del\" in dynamic_values\n",
-    "    cur_exists = \"Cur\" in dynamic_values\n",
-    "    only_na_cur_del = all(val in [\"N/A\", \"Cur\", \"Del\"] for val in dynamic_values)\n",
-    "    only_na_cur = all(val in [\"N/A\", \"Cur\"] for val in dynamic_values)\n",
+    "    add_exists = (row[dynamic_cols] == \"add\").any()\n",
+    "    del_exists = (row[dynamic_cols] == \"del\").any()\n",
+    "    cur_exists = (row[dynamic_cols] == \"cur\").any()\n",
+    "    only_na_cur_del = row[dynamic_cols].apply(lambda x: x in [\"N/A\", \"cur\", \"del\"]).all()\n",
+    "    only_na_cur = row[dynamic_cols].apply(lambda x: x in [\"N/A\", \"cur\"]).all()\n",
+    "    only_na = row[dynamic_cols].eq(\"N/A\").all()\n",
     "    \n",
-    "    if girs_status in [\"inactive insider\", \"\"] and tier_check:\n",
+    "    if (girs_status == \"inactive insider\" or girs_status == \"\") and tier_check:\n",
     "        return \"Part of Tier1, TTRL, PDMR\"\n",
     "    elif girs_status == \"non-core\" and tier_check:\n",
     "        return \"Change to Inactive\"\n",
-    "    elif girs_status == \"\" and not tier_check and add_exists and only_na_cur_del:\n",
+    "    elif girs_status == \"\" and tier_all_no and add_exists and only_na_cur_del:\n",
     "        return \"To Add\"\n",
-    "    elif girs_status == \"inactive insider\" and not tier_check and del_exists and only_na_cur:\n",
+    "    elif girs_status == \"inactive insider\" and tier_all_no and del_exists and only_na_cur:\n",
     "        return \"Already Inactive\"\n",
-    "    elif girs_status == \"non-core\" and not tier_check and add_exists and only_na_cur_del:\n",
+    "    elif girs_status == \"non-core\" and tier_all_no and add_exists and only_na_cur_del:\n",
     "        return \"Already Non-Core\"\n",
-    "    elif girs_status == \"inactive insider\" and not tier_check and del_exists and only_na_cur:\n",
+    "    elif girs_status == \"non-core\" and tier_all_no and del_exists and only_na:\n",
+    "        return \"Change to Non-Core\"\n",
+    "    elif girs_status == \"inactive insider\" and tier_all_no and del_exists and only_na_cur:\n",
     "        return \"No Action\"\n",
-    "    elif girs_status == \"non-core\" and not tier_check and (cur_exists or add_exists) and only_na_cur:\n",
+    "    elif girs_status == \"non-core\" and tier_all_no and (cur_exists or add_exists) and only_na:\n",
     "        return \"No Action\"\n",
-    "    elif not tier_check and girs_status in [\"\", \"non-core\"] and del_exists and only_na_cur:\n",
+    "    elif tier_all_no and (girs_status == \"\" or girs_status == \"non-core\") and del_exists and only_na:\n",
     "        return \"To Delete\"\n",
-    "    elif not tier_check and girs_status in [\"\", \"non-core\"] and (cur_exists or add_exists) and only_na_cur_del:\n",
+    "    elif tier_all_no and (girs_status == \"\" or girs_status == \"non-core\") and (cur_exists or add_exists) and only_na_cur_del:\n",
     "        return \"To Retain Non-Core\"\n",
-    "    else:\n",
-    "        return \"Uncategorized\"\n",
+    "    return \"Uncategorized\"\n",
     "\n",
-    "# Apply comment classification\n",
-    "df_processed[\"Comment\"] = df_processed.apply(classify_comment, axis=1)\n",
+    "# Apply classification\n",
+    "processed_data[\"Comment\"] = processed_data.apply(classify_records, axis=1)\n",
     "\n",
-    "# Save back to processed data sheet\n",
-    "with pd.ExcelWriter(processed_data_path, engine=\"openpyxl\", mode=\"a\", if_sheet_exists=\"replace\") as writer:\n",
-    "    df_processed.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n",
+    "# Save categorized data into separate sheets\n",
+    "categorized_sheets = processed_data.groupby(\"Comment\")\n",
     "\n",
-    "# Copy records to new sheets based on comments\n",
-    "with pd.ExcelWriter(processed_data_path, engine=\"openpyxl\", mode=\"a\") as writer:\n",
-    "    for comment in df_processed[\"Comment\"].unique():\n",
-    "        df_filtered = df_processed[df_processed[\"Comment\"] == comment]\n",
-    "        df_filtered.to_excel(writer, sheet_name=comment, index=False)\n"
+    "with pd.ExcelWriter(\"Processed_Data_Updated.xlsx\", engine=\"openpyxl\") as writer:\n",
+    "    processed_data.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n",
+    "    for comment, group in categorized_sheets:\n",
+    "        group.to_excel(writer, sheet_name=comment[:31], index=False)  # Excel sheet names max 31 chars\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feed6421",
+   "id": "019b3de4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00365f47",
+   "id": "8d6a20c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c92ae440",
+   "id": "1a2f89e6",
    "metadata": {},
    "outputs": [],
    "source": [
