--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,6 +3,77 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "19482ff8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load the Excel file\n",
+    "file_path = \"your_file.xlsx\"\n",
+    "xls = pd.ExcelFile(file_path)\n",
+    "\n",
+    "# Read the Processed Data sheet\n",
+    "df_processed = xls.parse(\"Processed Data\")\n",
+    "\n",
+    "# Ensure column names are lower case for consistency\n",
+    "df_processed.columns = df_processed.columns.str.lower()\n",
+    "\n",
+    "# Define the dynamic columns\n",
+    "dynamic_columns = [col for col in df_processed.columns if col not in [\"psid\", \"resource name\", \"email\", \"girs current status\", \"tier1\", \"ttrl\", \"pdmr\"]]\n",
+    "\n",
+    "# Function to determine the comment based on conditions\n",
+    "def assign_comment(row):\n",
+    "    girs_status = row[\"girs current status\"].strip().lower() if pd.notna(row[\"girs current status\"]) else \"\"\n",
+    "    tier_check = row[\"tier1\"].lower() == \"yes\" or row[\"ttrl\"].lower() == \"yes\" or row[\"pdmr\"].lower() == \"yes\"\n",
+    "    \n",
+    "    dynamic_values = [row[col].strip().lower() if pd.notna(row[col]) else \"n/a\" for col in dynamic_columns]\n",
+    "    add_exists = \"add\" in dynamic_values\n",
+    "    del_exists = \"del\" in dynamic_values\n",
+    "    cur_exists = \"cur\" in dynamic_values\n",
+    "    only_na_cur_del = all(val in [\"n/a\", \"cur\", \"del\"] for val in dynamic_values)\n",
+    "    only_na_cur_add = all(val in [\"n/a\", \"cur\", \"add\"] for val in dynamic_values)\n",
+    "    only_na = all(val == \"n/a\" for val in dynamic_values)\n",
+    "\n",
+    "    if girs_status == \"inactive insider\" or girs_status == \"\" and tier_check:\n",
+    "        return \"Part of Tier1, TTRL, PDMR\"\n",
+    "    elif girs_status == \"non-core\" and tier_check:\n",
+    "        return \"Change to Inactive\"\n",
+    "    elif girs_status == \"\" and not tier_check and add_exists and only_na_cur_del:\n",
+    "        return \"To Add\"\n",
+    "    elif girs_status == \"inactive insider\" and not tier_check and del_exists and only_na_cur_add:\n",
+    "        return \"Already Inactive\"\n",
+    "    elif girs_status == \"non-core\" and not tier_check and add_exists and only_na_cur_del:\n",
+    "        return \"Already Non-Core\"\n",
+    "    elif girs_status == \"inactive insider\" and not tier_check and del_exists and only_na_cur_add:\n",
+    "        return \"No Action\"\n",
+    "    elif girs_status == \"non-core\" and not tier_check and (cur_exists or add_exists) and only_na:\n",
+    "        return \"No Action\"\n",
+    "    elif not tier_check and girs_status in [\"\", \"non-core\"] and del_exists and only_na:\n",
+    "        return \"To Delete\"\n",
+    "    elif not tier_check and girs_status in [\"\", \"non-core\"] and (cur_exists or add_exists) and only_na_cur_del:\n",
+    "        return \"To Retain Non-Core\"\n",
+    "    else:\n",
+    "        return \"Uncategorized\"\n",
+    "\n",
+    "# Apply the function to create the Comment column\n",
+    "df_processed[\"comment\"] = df_processed.apply(assign_comment, axis=1)\n",
+    "\n",
+    "# Write the updated Processed Data sheet\n",
+    "with pd.ExcelWriter(\"your_updated_file.xlsx\", engine=\"xlsxwriter\") as writer:\n",
+    "    df_processed.to_excel(writer, sheet_name=\"Processed Data\", index=False)\n",
+    "    \n",
+    "    # Create separate sheets for each unique comment\n",
+    "    for comment in df_processed[\"comment\"].unique():\n",
+    "        df_filtered = df_processed[df_processed[\"comment\"] == comment]\n",
+    "        df_filtered.to_excel(writer, sheet_name=comment[:31], index=False)  # Sheet names must be <= 31 chars\n",
+    "\n",
+    "print(\"Updated file saved with new comments and categorized sheets.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dac36501",
    "metadata": {},
    "outputs": [],
