--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,6 +3,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a03ff4bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge GIRS Current Status\n",
+    "unique_psids = unique_psids.merge(df_girs[[\"PSID\", \"Role\"]], on=\"PSID\", how=\"left\")\n",
+    "unique_psids.rename(columns={\"Role\": \"GIRS Current Status\"}, inplace=True)\n",
+    "\n",
+    "# ===== START: Email-based fallback if PSID match fails =====\n",
+    "missing_mask = unique_psids[\"GIRS Current Status\"].isna() | (unique_psids[\"GIRS Current Status\"].str.lower() == \"n/a\")\n",
+    "fallback_emails = unique_psids.loc[missing_mask, [\"PSID\", \"Selected Email\"]].copy()\n",
+    "\n",
+    "# Clean df_girs email for match\n",
+    "df_girs[\"clean_email\"] = df_girs[\"Email\"].apply(lambda x: x.strip().lower() if isinstance(x, str) else \"\")\n",
+    "\n",
+    "# Clean fallback_emails too\n",
+    "fallback_emails[\"Selected Email\"] = fallback_emails[\"Selected Email\"].apply(lambda x: x.strip().lower() if isinstance(x, str) else \"\")\n",
+    "\n",
+    "# Merge based on email\n",
+    "email_matches = fallback_emails.merge(df_girs[[\"clean_email\", \"Role\"]], how=\"left\", left_on=\"Selected Email\", right_on=\"clean_email\")\n",
+    "\n",
+    "# Update missing GIRS Current Status\n",
+    "for idx, row in email_matches.iterrows():\n",
+    "    psid = row[\"PSID\"]\n",
+    "    role = row[\"Role\"]\n",
+    "    if pd.notna(role):\n",
+    "        unique_psids.loc[unique_psids[\"PSID\"] == psid, \"GIRS Current Status\"] = role\n",
+    "# ===== END: Email-based fallback =====\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "19482ff8",
    "metadata": {},
    "outputs": [],
@@ -205,7 +238,7 @@
     "# Filter valid PSIDs (numeric only)\n",
     "df_valid_psid = df_conso[df_conso[\"PSID\"].str.isnumeric()].copy()\n",
     "df_invalid_psid = df_conso[~df_conso[\"PSID\"].str.isnumeric()].copy()\n",
-    "df_invalid_psid.insert(0, \"PSID\", \"Invalid\")\n",
+    "# df_invalid_psid.insert(0, \"PSID\", \"Invalid\")\n",
     "\n",
     "unique_psids = df_valid_psid.groupby(\"PSID\").apply(process_psid_group).reset_index()\n",
     "\n",
@@ -225,8 +258,8 @@
     "unique_psids[\"TTRL\"] = unique_psids[\"PSID\"].isin(df_ttrl[\"PSID\"]).map({True: \"Yes\", False: \"No\"})\n",
     "\n",
     "# Merge PDMR status\n",
-    "unique_psids[\"PDMR\"] = unique_psids[\"Resource Name\"].isin(df_pdmr[\"Resource Name\"]).map({True: \"Yes\", False: \"No\"})\n",
-    "\n",
+    "# unique_psids[\"PDMR\"] = unique_psids[\"Resource Name\"].isin(df_pdmr[\"Resource Name\"]).map({True: \"Yes\", False: \"No\"})\n",
+    "df_invalid_psid[\"PDMR\"]=\"Resource Name is missing.\"\n",
     "# Extract unique team names from Conso Data Tab data column\n",
     "df_conso[\"Tab data\"] = df_conso[\"Tab data\"].astype(str)\n",
     "unique_teams = df_conso[\"Tab data\"].str.split(\",\").explode().str.strip().unique()\n",
