--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a03ff4bf",
+   "id": "e406c204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,26 @@
     "    role = row[\"Role\"]\n",
     "    if pd.notna(role):\n",
     "        unique_psids.loc[unique_psids[\"PSID\"] == psid, \"GIRS Current Status\"] = role\n",
-    "# ===== END: Email-based fallback =====\n"
+    "# ===== END: Email-based fallback =====\n",
+    "# ===== START: Enhanced update of team status using PSID, fallback to Email =====\n",
+    "for _, row in df_conso.iterrows():\n",
+    "    psid = row[\"PSID\"]\n",
+    "    status = row[\"Status\"]\n",
+    "    email = row[\"Email\"]\n",
+    "    teams = str(row[\"Tab data\"]).split(\",\")\n",
+    "\n",
+    "    for team in teams:\n",
+    "        team = team.strip()\n",
+    "        \n",
+    "        # Update based on PSID match\n",
+    "        updated = unique_psids.loc[unique_psids[\"PSID\"] == psid, team]\n",
+    "        if updated.notna().any():\n",
+    "            unique_psids.loc[unique_psids[\"PSID\"] == psid, team] = status\n",
+    "\n",
+    "        # Update based on Email if PSID match didn't work\n",
+    "        fallback_mask = (unique_psids[team] == \"N/A\") & (unique_psids[\"Selected Email\"] == email)\n",
+    "        unique_psids.loc[fallback_mask, team] = status\n",
+    "# ===== END: Enhanced update of team status using PSID, fallback to Email =====\n"
    ]
   },
   {
