--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e406c204",
+   "id": "6eacbf11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import win32com.client\n",
+    "\n",
+    "# Load your file and sheet\n",
+    "df = pd.read_excel(\"Your_File.xlsx\")  # <-- Update with your actual file\n",
+    "email_col = \"Email\"  # <-- Your email column name\n",
+    "\n",
+    "# Initialize Outlook session\n",
+    "outlook = win32com.client.Dispatch(\"Outlook.Application\").Session\n",
+    "\n",
+    "# Define a function to validate each email\n",
+    "def check_email_validity(email):\n",
+    "    if pd.isna(email) or not isinstance(email, str) or \"@\" not in email:\n",
+    "        return \"Invalid\"\n",
+    "    recipient = outlook.CreateRecipient(email.strip())\n",
+    "    return \"Valid\" if recipient.Resolve() else \"Invalid\"\n",
+    "\n",
+    "# Apply to the dataframe\n",
+    "df[\"Email Validity\"] = df[email_col].apply(check_email_validity)\n",
+    "\n",
+    "# Save to new file\n",
+    "output_file = \"Email_Validation_With_Status.xlsx\"\n",
+    "df.to_excel(output_file, index=False)\n",
+    "\n",
+    "print(f\"✅ Email validation complete. Output saved to: {output_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b005890e",
    "metadata": {},
    "outputs": [],
    "source": [
