--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,41 +3,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eacbf11",
+   "id": "a4b9486d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import win32com.client\n",
     "\n",
-    "# Load your file and sheet\n",
-    "df = pd.read_excel(\"Your_File.xlsx\")  # <-- Update with your actual file\n",
-    "email_col = \"Email\"  # <-- Your email column name\n",
+    "# === Load your Excel file ===\n",
+    "file_path = \"Your_File.xlsx\"  # Replace with your file name\n",
+    "psid_col = \"PSID\"             # Replace with your actual column name\n",
+    "df = pd.read_excel(file_path)\n",
     "\n",
-    "# Initialize Outlook session\n",
-    "outlook = win32com.client.Dispatch(\"Outlook.Application\").Session\n",
+    "# === Connect to open Outlook session ===\n",
+    "outlook = win32com.client.gencache.EnsureDispatch(\"Outlook.Application\")\n",
+    "session = outlook.Session\n",
     "\n",
-    "# Define a function to validate each email\n",
-    "def check_email_validity(email):\n",
-    "    if pd.isna(email) or not isinstance(email, str) or \"@\" not in email:\n",
+    "# === Function to check if PSID/alias is valid in Outlook ===\n",
+    "def resolve_psid(psid):\n",
+    "    if pd.isna(psid) or not isinstance(psid, str) or psid.strip() == \"\":\n",
     "        return \"Invalid\"\n",
-    "    recipient = outlook.CreateRecipient(email.strip())\n",
-    "    return \"Valid\" if recipient.Resolve() else \"Invalid\"\n",
+    "    try:\n",
+    "        recipient = session.CreateRecipient(psid.strip())\n",
+    "        if recipient.Resolve():\n",
+    "            return \"Valid\"\n",
+    "        else:\n",
+    "            return \"Invalid\"\n",
+    "    except Exception as e:\n",
+    "        return \"Invalid\"\n",
     "\n",
-    "# Apply to the dataframe\n",
-    "df[\"Email Validity\"] = df[email_col].apply(check_email_validity)\n",
+    "# === Apply to all PSIDs ===\n",
+    "df[\"Email Validity\"] = df[psid_col].apply(resolve_psid)\n",
     "\n",
-    "# Save to new file\n",
-    "output_file = \"Email_Validation_With_Status.xlsx\"\n",
-    "df.to_excel(output_file, index=False)\n",
-    "\n",
-    "print(f\"✅ Email validation complete. Output saved to: {output_file}\")\n"
+    "# === Save output with validity status ===\n",
+    "output_path = \"Resolved_Email_Status.xlsx\"\n",
+    "df.to_excel(output_path, index=False)\n",
+    "print(f\"✅ Done. Check '{output_path}' for results.\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b005890e",
+   "id": "34b36b1e",
    "metadata": {},
    "outputs": [],
    "source": [
