--- a/girs.ipynb
+++ b/girs.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4b9486d",
+   "id": "ff8feca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,40 +11,52 @@
     "import win32com.client\n",
     "\n",
     "# === Load your Excel file ===\n",
-    "file_path = \"Your_File.xlsx\"  # Replace with your file name\n",
-    "psid_col = \"PSID\"             # Replace with your actual column name\n",
+    "file_path = \"Your_File.xlsx\"  # Replace with actual file name\n",
+    "psid_col = \"PSID\"\n",
     "df = pd.read_excel(file_path)\n",
     "\n",
-    "# === Connect to open Outlook session ===\n",
+    "# === STEP 1: Separate PSIDs ===\n",
+    "# ✔️ Keep only numeric PSIDs and pad with zeroes to 8 digits\n",
+    "df[psid_col] = df[psid_col].astype(str).str.strip()\n",
+    "\n",
+    "# ✔️ Separate valid and invalid PSIDs\n",
+    "df_valid = df[df[psid_col].str.isdigit()].copy()\n",
+    "df_invalid = df[~df[psid_col].str.isdigit()].copy()  # PSIDs with alphabets or empty\n",
+    "\n",
+    "# ✔️ Pad valid PSIDs to 8 digits\n",
+    "df_valid[psid_col] = df_valid[psid_col].str.zfill(8)\n",
+    "\n",
+    "# === STEP 2: Connect to running Outlook ===\n",
     "outlook = win32com.client.gencache.EnsureDispatch(\"Outlook.Application\")\n",
     "session = outlook.Session\n",
     "\n",
-    "# === Function to check if PSID/alias is valid in Outlook ===\n",
+    "# === STEP 3: Function to resolve PSID in Outlook ===\n",
     "def resolve_psid(psid):\n",
-    "    if pd.isna(psid) or not isinstance(psid, str) or psid.strip() == \"\":\n",
-    "        return \"Invalid\"\n",
     "    try:\n",
-    "        recipient = session.CreateRecipient(psid.strip())\n",
+    "        recipient = session.CreateRecipient(psid)\n",
     "        if recipient.Resolve():\n",
     "            return \"Valid\"\n",
     "        else:\n",
     "            return \"Invalid\"\n",
-    "    except Exception as e:\n",
+    "    except Exception:\n",
     "        return \"Invalid\"\n",
     "\n",
-    "# === Apply to all PSIDs ===\n",
-    "df[\"Email Validity\"] = df[psid_col].apply(resolve_psid)\n",
+    "# === STEP 4: Apply function and add validity column ===\n",
+    "df_valid[\"Email Validity\"] = df_valid[psid_col].apply(resolve_psid)\n",
     "\n",
-    "# === Save output with validity status ===\n",
-    "output_path = \"Resolved_Email_Status.xlsx\"\n",
-    "df.to_excel(output_path, index=False)\n",
-    "print(f\"✅ Done. Check '{output_path}' for results.\")\n"
+    "# === STEP 5: Save both results ===\n",
+    "output_file = \"Resolved_Email_Status.xlsx\"\n",
+    "with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
+    "    df_valid.to_excel(writer, sheet_name=\"Checked_PSIDs\", index=False)\n",
+    "    df_invalid.to_excel(writer, sheet_name=\"Skipped_PSIDs\", index=False)\n",
+    "\n",
+    "print(f\"✅ Done. Output saved to '{output_file}' with valid and skipped PSIDs.\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34b36b1e",
+   "id": "a103e8e1",
    "metadata": {},
    "outputs": [],
    "source": [
